marstonia ideas loc + loc fixes

--- a/localisation/TD_01_flavour_bogiland_l_english.yml
+++ b/localisation/TD_01_flavour_bogiland_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  bogiland_ideas:0 "Bogilish Ideas"
  bogiland_ideas_start:0 "Bogilish Traditions"
- bogiland_ideas_bonus:0 "Bogilish Ambitions"
+ bogiland_ideas_bonus:0 "Bogilish Ambition"
  bogiland_cultural_rebirth:0 "Cultural Rebirth"
  bogiland_cultural_rebirth_desc:0 "Thanks to the efforts of king Jeri Laski Bogiland has been experiencing a period of cultural and scientific growth. Many great philosophers and artists are attracted to the court bringing new innovations and trends from the other parts of the continent."
  bogiland_new_imperial_gate:0 "New Imperial Gate"
@@ -23,7 +23,7 @@
  
  wedla_ideas:0 "Wedlan Ideas"
  wedla_ideas_start:0 "Wedlan Traditions"
- wedla_ideas_bonus:0 "Wedlan Ambitions"
+ wedla_ideas_bonus:0 "Wedlan Ambition"
  wedla_merchant_monarchy:0 "Merchant Monarchy"
  wedla_merchant_monarchy_desc:0 "Our location between Ostsee and Onzee has created a great opportunity for mercantile tradition to develop in wedlan lands. Transfer of goods across Odwal is popular amongst merchants who want to avoid paying tolls in Mezonia and Uzkolia. This proved useful in creating our own nationhood, independent from and older than Bogiland."
  wedla_wedlanska_gildija_handlowa:0 "Wedlanska Gildija Handlowa"
