--- a/localisation/TD_01_flavour_donucakar_l_english.yml
+++ b/localisation/TD_01_flavour_donucakar_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  donucakar_ideas:0 "Donuçakari Ideas"
  donucakar_ideas_start:0 "Donuçakari Traditions"
- donucakar_ideas_bonus:0 "Donuçakari Ambitions"
+ donucakar_ideas_bonus:0 "Donuçakari AAmbition
  donucakar_last_bastion:0 "Last Bastion"
  donucakar_last_bastion_desc:0 "For quite some time zeolous and pompous people of Chilverchia have been subjugating neighboring nations in search for glory, seeing them as inferior. Now, most of our people's lands are under subjugation and only we are here to stop these infidels from destroying our beautiful country!"
  donucakar_king_and_the_princess:0 "King and the Princess"
