--- a/localisation/TD_01_flavour_fawud_l_english.yml
+++ b/localisation/TD_01_flavour_fawud_l_english.yml
@@ -18,7 +18,7 @@
  
  group_musarfic_ideas:0 "Musarfic Ideas"
  group_musarfic_ideas_start:0 "Musarfic Traditions"
- group_musarfic_ideas_bonus:0 "Musarfic Ambitions"
+ group_musarfic_ideas_bonus:0 "Musarfic Ambition"
  musarfic_folk_law:0 "Folk Law"
  musarfic_folk_law_desc:0 "People of Fawud have a large number of unwritten laws, many of which seem so trivial there never was any need to compile them in a unified codex."
  musarfic_family_bonds:0 "Clan Bonds"
