--- a/localisation/TD_01_flavour_marstonia_l_english.yml
+++ b/localisation/TD_01_flavour_marstonia_l_english.yml
@@ -92,3 +92,21 @@
  marstonian_elective_monarchy_reform_desc:0 "In this sytem the monarch is elected from the group trusted nobles to make sure the best candidate is actually the most competent."
 
  northern_ostemer_ports_group:0 "Ports of Northern Ostemer"
+
+ ziemelia_ideas:0 "Ziemelian Ideas"
+ ziemelia_ideas_bonus:0 "Ziemelian Ambition"
+ ziemelia_ideas_start:0 "Ziemelian Traditions"
+ ziemelia_southward_expansion:0 "Southward Expansion"
+ ziemelia_southward_expansion_desc:0 "Our conversion to Saelianism has granted us justification to conquer Marstonian heathens. Foreign missionaries are eager to help local populations embrace new innovations."
+ ziemelia_forest_exploitation:0 "Forest Exploitation"
+ ziemelia_forest_exploitation_desc:0 "Lack of soil suitable for agriculture has always been a problem in Marstonia which limited our population's growth. To solve this, forests have been cut down for lumber and new lands are now available for farming"
+ ziemelia_army_reforms:0 "Army Reforms"
+ ziemelia_army_reforms_desc:0 "Inspired by Donucian recruitment system, karalis Kaupo II adopted a new way of conscription, shifting the majority of military force from noble knights to peasant levies. Additionaly, the Drotaci were given high ranking positions in the military in exchange for loyalty."
+ ziemelia_mezonian_trade:0 "Mezonian Trade"
+ ziemelia_mezonian_trade_desc:0 "Marstonian Coast has many important ports in which merchants stop for a rest or to purchase local goods, which allows us to benefit from Mezonian straits even if we don't directly control or influence it."
+ ziemelia_elite_cavalry_academy:0 "Elite Cavalry Academy"
+ ziemelia_elite_cavalry_academy_desc:0 "When the city of Karavija was refounded it attracted many bright minds, one of which was Klavess Tott who later founded the Royal Chivalry Academy, meant to train the Drotaci professional horseriding, using modern firearms and leading troops."
+ ziemelia_infrastructure_expansion:0 "Infrastructure Expansion"
+ ziemelia_infrastructure_expansion_desc:0 "Northern Coast was disconnected from the rest of marstonia for most of its time due to a long maritime route and dense forests of central Ziemelia. In 1670s many new roads were built to accomodate this problem and finally connect our lands, with major roads crossing in Karavija."
+ ziemelia_conquest_of_marstonia:0 "Conquest of Marstonia"
+ ziemelia_conquest_of_marstonia_desc:0 "Disunited Valdniestes of Marstonia always fought each other over petty matters and minor land gains. If our nation wants to survive in the modern age of centralization and absolutism, we must put an end to these infightings. We will stand proudly alongside other empires of the world."
