--- a/localisation/TD_01_flavour_silvestria_l_english.yml
+++ b/localisation/TD_01_flavour_silvestria_l_english.yml
@@ -20,7 +20,7 @@
 
 
  ostemer_ideas:0 "Ostemer Minor Ideas"
- ostemer_ideas_bonus:0 "Ostemer Minor Ambitions"
+ ostemer_ideas_bonus:0 "Ostemer Minor Ambition"
  ostemer_ideas_start:0 "Ostemer Minor Traditions"
  ostemer_cradle_of_imperial_renaissance:0 "Cradle of Imperial Renaissance"
  ostemer_cradle_of_imperial_renaissance_desc:0 "It was through these lands that the ideas of Renaissance spread to the empire thanks to our Camarian merchants."
@@ -37,7 +37,7 @@
  ostemer_spread_of_modern_ideas:0 "Spread of Ideas"
  ostemer_spread_of_modern_ideas_desc:0 "New ideas come and go every day in these ports and our citizens are accustomed to them constantly changing. If something is discovered in Pemenia, our merchants will know soon eough and spread this knowledge further."
  felder_ideas:0 "Felder Minor Ideas"
- felder_ideas_bonus:0 "Felder Minor Ambitions"
+ felder_ideas_bonus:0 "Felder Minor Ambition"
  felder_ideas_start:0 "Felder Minor Traditions"
  felder_tax_reforms:0 "Tax Reforms"
  felder_tax_reforms_desc:0 "Tax reforms of the Emperor Albrecht von Shlaufberg had the greatest effect on these lands due to most of local farms being controlled by powerful individuals."
@@ -54,7 +54,7 @@
  felder_absolutism:0 "Felder Absolutism"
  felder_absolutism_desc:0 "Richness of these lands have made the local elites greedy for power which lead to the strengthening of the prince and diminising the nobility."
  saelish_ideas:0 "Salish Minor Ideas"
- saelish_ideas_bonus:0 "Salish Minor Ambitions"
+ saelish_ideas_bonus:0 "Salish Minor Ambition"
  saelish_ideas_start:0 "Salish Minor Traditions"
  saelish_knights:0 "Salish Knights"
  saelish_knights_desc:0 "'Chivalry is not dead', at least that's what the pompous yet brave knights of Salia say and their effectiveness proves them right most of the time."
@@ -71,7 +71,7 @@
  saelish_military_engineeering_schools:0 "Modern Military Engineering"
  saelish_military_engineeering_schools_desc:0 "Mercenary wars taught the empire that the superior firepower was more important than good cavalry. Ever since then, many tried to tame the power of the gunpowder in these lands."
  upper_magreiner_ideas:0 "Upper Magreiner Ideas"
- upper_magreiner_ideas_bonus:0 "Upper Magreiner Ambitions"
+ upper_magreiner_ideas_bonus:0 "Upper Magreiner Ambition"
  upper_magreiner_ideas_start:0 "Upper Magreiner Traditions"
  upper_magreiner_heart_of_the_empire:0 "Heart of the Empire"
  upper_magreiner_heart_of_the_empire_desc:0 "Upper Magreina is where the Via Caroli and Via Magreini cross in the great city of Hegenstadt."
@@ -88,7 +88,7 @@
  development_of_the_upper_magreiner:0 "Development of the Upper Magreiner"
  development_of_the_upper_magreiner_desc:0 "Fertile farmlands of the Magreina bring us prosperity, but they thanks to the investments of many emperor they are increasingly making us and the empire much more self-sustainable."
  middle_magreiner_ideas:0 "Middle Magreiner Ideas"
- middle_magreiner_ideas_bonus:0 "Middle Magreiner Ambitions"
+ middle_magreiner_ideas_bonus:0 "Middle Magreiner Ambition"
  middle_magreiner_ideas_start:0 "Middle Magreiner Traditions"
  middle_magreiner_granary_of_the_empire:0 "Granary of the Empire"
  middle_magreiner_granary_of_the_empire_desc:0 "Flatlands of northern Silvestria are so fertile that they not only feed the local population, but the wheat and rye are exported to outer reaches of the empire and even outside of it."
@@ -101,7 +101,7 @@
  middle_magreiner_refined_artillery_craft:0 "Refiner Artillery Craft"
  middle_magreiner_refined_artillery_craft_desc:0 "Late XVII century Kriegersteiner interest in artillery and gunpowder also had a large influence on local lords, who often wish to imitate the emperor to gain even just a factor of his splendor."
  nahtrucer_ideas:0 "Nähtrucer Minor Ideas"
- nahtrucer_ideas_bonus:0 "Nähtrucer Minor Ambitions"
+ nahtrucer_ideas_bonus:0 "Nähtrucer Minor Ambition"
  nahtrucer_ideas_start:0 "Nähtrucer Minor Traditions"
  nahtrucer_northern_frontier:0 "Northern Frontier"
  nahtrucer_northern_frontier_desc:0 "Harsh life in the swampy Gyrdian forests made our men incredibly trusting in the leadership, because not once they proved to them that the cause they are fighting for is right."
@@ -118,7 +118,7 @@
  nahtrucer_administrative_reforms:0 "Administrative Reforms"
  nahtrucer_administrative_reforms_desc:0 "Consolidation of the northern border of the empire demanded from us to establish a proper administration, very different to the old feudal model. We can't no longer allow self-will of local lords and we will rule by law, not by the sword."
  snaiwatzer_ideas:0 "Snaiwatzer Minor Ideas"
- snaiwatzer_ideas_bonus:0 "Snaiwatzer Minor Ambitions"
+ snaiwatzer_ideas_bonus:0 "Snaiwatzer Minor Ambition"
  snaiwatzer_ideas_start:0 "Snaiwatzer Minor Traditions"
  snaiwatzer_mining_region:0 "Mining Region"
  snaiwatzer_mining_region_desc:0 "These lands are responsible for almot three quarters of the entire ore mining and processing. These easily available resources such as iron and coal allow us to cheaply produce equipment for our troops."
@@ -135,7 +135,7 @@
  snaiwatzer_cradle_of_engineering_schools:0 "High Altitude Constructions"
  snaiwatzer_cradle_of_engineering_schools_desc:0 "Harsh winters and wild mountains taught the Snaiwatzer people how to not only effectively build good shelters, but also how to conserve resources in case of an emergency."
  geoberic_ideas:0 "Geoberic Minor Ideas"
- geoberic_ideas_bonus:0 "Geoberic Minor Ambitions"
+ geoberic_ideas_bonus:0 "Geoberic Minor Ambition"
  geoberic_ideas_start:0 "Geoberic Minor Traditions"
  geoberic_dynastic_elites:0 "Dynastic Elites"
  geoberic_dynastic_elites_desc:0 "New rulers who came here from Salia after the formation of Ansgarland were detached from the reality of local Glaser population. Even now, when the peninsula is populated by Geoberic people, they see themselves as distinct and unique enough to justify their elitist rule."
