--- a/localisation/TD_01_flavour_visparaya_l_english.yml
+++ b/localisation/TD_01_flavour_visparaya_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  fravasumi_ideas:0 "Fravasumi Ideas"
  fravasumi_ideas_start:0 "Fravasumi Traditions"
- fravasumi_ideas_bonus:0 "Fravasumi Ambitions"
+ fravasumi_ideas_bonus:0 "Fravasumi Ambition"
  fravasum_crossroad_of_empires:0 "Crossroad of Empires"
  fravasum_crossroad_of_empires_desc:0 "City of Barzakhan, our capital, sits at the border between 2 great ancient civilizations - visparaya and hestan. Both of them historically clashed over the city to control the flow of trade to pamkusea and beyond. This struggle and international trade created a city filled with many cultures, religious and manners."
  fravasum_merchant_conversion:0 "Merchant Conversion"
@@ -19,19 +19,19 @@
 
  ahnoyasi_ideas:0 "Ahnoyasi Ideas"
  ahnoyasi_ideas_start:0 "Ahnoyasi Traditions"
- ahnoyasi_ideas_bonus:0 "Ahnoyasi Ambitions"
+ ahnoyasi_ideas_bonus:0 "Ahnoyasi Ambition"
 
  frasatahi_ideas:0 "Frasatahi Ideas"
  frasatahi_ideas_start:0 "Frasatahi Traditions"
- frasatahi_ideas_bonus:0 "Frasatahi Ambitions"
+ frasatahi_ideas_bonus:0 "Frasatahi Ambition"
 
  visparayan_ideas:0 "Visparayan Ideas"
  visparayan_ideas_start:0 "Visparayan Traditions"
- visparayan_ideas_bonus:0 "Visparayan Ambitions" 
+ visparayan_ideas_bonus:0 "Visparayan Ambition" 
 
  memlashal_ideas:0 "Memlashali Ideas"
  memlashal_ideas_start:0 "Memlashali Traditions"
- memlashal_ideas_bonus:0 "Memlashali Ambitions" 
+ memlashal_ideas_bonus:0 "Memlashali Ambition" 
  memlashal_panourgian_trade:0 "Panourgian Trade"
  memlashal_panourgian_trade_desc:0 "Panourgian Sea is where the most important trade routes between the west and the east meet. Any country controlling these regions is not only profiting by maintaining fees, but can also project their power onto their neighbours."
  memlashal_varazahani_administration:0 "Varazahani Administration"
