indriger ideas loc

--- a/localisation/TD_01_flavour_pohjoismaa_l_english.yml
+++ b/localisation/TD_01_flavour_pohjoismaa_l_english.yml
@@ -32,3 +32,21 @@
  lou_dominion_over_the_steppe_desc:0 "As we reach deeper and deeper into Kakigia, also known by our settlers as Idamaa, we become much more integrated with local people and in turn local population learns about the wonders of civilization."
  lou_steppe_domination:0 "Steppe Domination"
  lou_steppe_domination_desc:0 "We tamed untameable - Kakigia is ours."
+
+ group_indriger_ideas:0 "Indriger Minor Ideas"
+ group_indriger_ideas_bonus:0 "Indriger Minor Ambition"
+ group_indriger_ideas_start:0 "Indriger Minor Traditions"
+ indriger_along_the_coast:0 "Along the Coast"
+ indriger_along_the_coast_desc:0 "Our ships have always been created to sail along the coasts rather than in the open sea, but our tactics to often resupply allowed us to explore what lies in the eastern seas."
+ indriger_coastal_settlements:0 "Coastal Settlements"
+ indriger_coastal_settlements_desc:0 "The vast majority of Indrigerland's Population lives near the sea, which means that many of them are fishermen, shipwrights and traders who are experienced in the life at the sea."
+ indriger_local_trading:0 "Local Trading"
+ indriger_local_trading_desc:0 "A common practice to increase overall prosperity is to have multiple villages specialize in producing a specific good, which they then sold to other settlements for exchange of their product. This benefits everybody and increases overall production."
+ indriger_protect_the_people:0 "Protect the People"
+ indriger_protect_the_people_desc:0 "Most of our homeland is protected by Pohjoisvuoristo from the south and Indriger Sea from the north, but when the enemy comes our people are eager to protect our beautiful land from invaders."
+ indriger_religious_songs:0 "Religious Songs"
+ indriger_religious_songs_desc:0 "Religion of Sointuva places an emphasis on importance of songs to religious experiences. Compared to southern songs of glory, good and evil like in Tummland and Merkaatimaa, our songs focus on life of the common folk, local tales and sea monsters."
+ indriger_edge_of_the_world:0 "Edge of the World"
+ indriger_edge_of_the_world_desc:0 "Our ports are the furthest north settled places in the known world. Many places are unsailable during winter months and foreign traders often wonder how do we survive in these harsh conditions. The truth is that the climate made us stronger and hardened like no other nation."
+ indriger_new_land:0 "New Land"
+ indriger_new_land_desc:0 "After reaching unpassable ice wastelands in the east, many turned their attention to the west where western explorers reported a whole new continent. Many of our people are eager to discover this new distand land."
