--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1761,8 +1761,8 @@
  PROV1760:0 "Metsykay"
  PROV1761:0 "Dorynaatyh"
  PROV1762:0 "Tarilyk"
- PROV1763:0 "1763"
- PROV1764:0 "1764"
+ PROV1763:0 "Pitsitogan Coast"
+ PROV1764:0 "Nilan Sea"
  PROV1765:0 "Kawe"
  PROV1766:0 "Miwanahe"
  PROV1767:0 "Hiratesa"
@@ -1771,7 +1771,7 @@
  PROV1770:0 "Nahabepaya"
  PROV1771:0 "Nestekhara"
  PROV1772:0 "Hirahirawa"
- PROV1773:0 "1773"
+ PROV1773:0 "Sutrani Bay"
  PROV1774:0 "1774"
  PROV1775:0 "1775"
  PROV1776:0 "1776"
@@ -1783,9 +1783,9 @@
  PROV1782:0 "1782"
  PROV1783:0 "1783"
  PROV1784:0 "1784"
- PROV1785:0 "1785"
+ PROV1785:0 "Outer Sangari Sea"
  PROV1786:0 "1786"
- PROV1787:0 "1787"
+ PROV1787:0 "Amealungali Coast"
  PROV1788:0 "1788"
  PROV1789:0 "1789"
  PROV1790:0 "Saramaran"
@@ -1814,7 +1814,7 @@
  PROV1813:0 "1813"
  PROV1814:0 "1814"
  PROV1815:0 "1815"
- PROV1816:0 "1816"
+ PROV1816:0 "Dakhani Tip"
  PROV1817:0 "1817"
  PROV1818:0 "1818"
  PROV1819:0 "1819"
@@ -1823,7 +1823,7 @@
  PROV1822:0 "1822"
  PROV1823:0 "1823"
  PROV1824:0 "1824"
- PROV1825:0 " Visidanba Lake"
+ PROV1825:0 "Visidanba Lake"
  PROV1826:0 "1826"
  PROV1827:0 "1827"
  PROV1828:0 "1828"
@@ -2228,8 +2228,8 @@
  PROV2227:0 "Vazixan"
  PROV2228:0 "Gramat"
  PROV2229:0 "Rasriqiha"
- PROV2230:0 "2230"
- PROV2231:0 "2231"
+ PROV2230:0 "Dakhan"
+ PROV2231:0 "Kanshtul"
  PROV2232:0 "Autar"
  PROV2233:0 "Gari"
  PROV2234:0 "Kottamalliram"
