--- a/localisation/TD_01_flavour_argenia_l_english.yml
+++ b/localisation/TD_01_flavour_argenia_l_english.yml
@@ -78,3 +78,8 @@
  estate_burghers_dorchean_fisheries_rt:0 "Removes reduced §YLocal Development Cost§! and increased §YLocal Goods Produced§! from all coastal provinces in §YDorchean Isles§!."
  estate_burghers_dorchean_fisheries_modifier:0 "Dorchean Fisheries"
  desc_estate_burghers_dorchean_fisheries_modifier:0 "Mixing warm and cold currents make the seas around the dorchean isels hold large populations of variety fishes making coastal settlements much more prosperous than those inland."
+
+ 
+ wymondian_kingdom_reform:0 "Wymondian Kingdom"
+ wymondian_kingdom_reform_desc:0 "In kingdom of Argenia ruler has the power to designate their heir to the throne.1"
+ mechanic_disinherit_less_penalty_yes:0 "Disinheriting heirs costs 50% less prestige."
