--- a/localisation/TD_01_flavour_donucakar_l_english.yml
+++ b/localisation/TD_01_flavour_donucakar_l_english.yml
@@ -1,9 +1,9 @@
 ﻿l_english:
  donucakar_ideas:0 "Donuçakari Ideas"
  donucakar_ideas_start:0 "Donuçakari Traditions"
- donucakar_ideas_bonus:0 "Donuçakari AAmbition
+ donucakar_ideas_bonus:0 "Donuçakari Ambition"
  donucakar_last_bastion:0 "Last Bastion"
- donucakar_last_bastion_desc:0 "For quite some time zeolous and pompous people of Chilverchia have been subjugating neighboring nations in search for glory, seeing them as inferior. Now, most of our people's lands are under subjugation and only we are here to stop these infidels from destroying our beautiful country!"
+ donucakar_last_bastion_desc:0 "For quite some time zealous and pompous people of Chilverchia have been subjugating neighboring nations in search for glory, seeing them as inferior. Now, most of our people's lands are under subjugation and only we are here to stop these infidels from destroying our beautiful country!"
  donucakar_king_and_the_princess:0 "King and the Princess"
  donucakar_king_and_the_princess_desc:0 "Donuçakar has a long history of diplomacy with the Empire. It all began in the XIII century, when the Saelian Emperor reached out to Donucian king with a proposal - the king will stop his brutal raids and convert to saelianism and the Emperor will grant him the hand of his daughter. The king accepted the proposal. After that deal more events followed, and the kingdom and the Empire still share a warm relation."
  donucakar_donucian_legacy:0 "Donucian Legacy"
