--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -684,3 +684,6 @@
  west_baraguna_area:0 "West Baraguna"
  east_baraguna_area:0 "East Baraguna"
  gyrymagac_area:0 "Gyrymagac"
+
+ north_gasihaean_area:0 "North Gasihaean"
+ south_gasihaean_area:0 "South Gasihaean"
