--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -91,6 +91,7 @@
  qubrayian_rebels_demand:0 "Convert $COUNTRYNAME$"
 
  rah_jadid:0 "Rah Jadid"
+ rah_jadid_religion_desc:0 "The roots of this faith can be tracked to Ilumist sects in Qarasam who syncretices their beliefs with Uttarian dualistic view of the world, but it was de facto founded by Yatun who ruled Frankras and later the entire Visparaya in X century. Doctrines of this religion changes across the many rulers and states, but overall is seen as an attempt to merge monotheistic Ilumist religion with multiple Hestani faiths."
  nah_jadid:0 "Nah Jadid"
  rah_jadid_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  rah_jadid_rebels_title:0 "Religious"
@@ -195,6 +196,7 @@
  nahitar_rebels_demand:0 "Convert $COUNTRYNAME$"
 
  uttarian:0 "Uttarian"
+ uttarian_religion_desc:0 "The core of Uttarian religion emphasises the dual nature of the world which is controlled by Abadih and Anoxwardan, who rule the Earth alternately in a cyclic pattern. This religion is characterized by complex cosmology with numerous lesser gods and deities."
  uttarian_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  uttarian_rebels_title:0 "Religious"
  uttarian_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
@@ -276,7 +278,12 @@
  samgharsahi_rebels_army:0 "$RELIGION$ Army"
  samgharsahi_rebels_demand:0 "Convert $COUNTRYNAME$"
 
-
+ otigari:0 "Otigari"
+ otigari_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ otigari_rebels_title:0 "Religious"
+ otigari_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ otigari_rebels_army:0 "$RELIGION$ Army"
+ otigari_rebels_demand:0 "Convert $COUNTRYNAME$"
 
 
  hengtuan:0 "Hengtuan"
