--- a/localisation/TD_01_Flavour_Rah_jadid_l_english.yml
+++ b/localisation/TD_01_Flavour_Rah_jadid_l_english.yml
@@ -92,3 +92,8 @@
  ehsani_resurgence.8.t:0 "Ehšani Resurgence - Integration"
  ehsani_resurgence.8.desc:0 "After many years of religious turmoil, the Ehšani philosophy has largely impacted the religious doctrines in our nation, causing the tensions to diminish."
  ehsani_resurgence.8.a:0 "As it should be."
+
+ ehsani_community:0 "Ehšani Community"
+ ehsani_community_protected:0 "Protected Ehšani Community"
+ 
+ ehsani_happened_tt:0 "Ehšan's Influence has greatly increased"
