United Marstonia Ideas

--- a/localisation/TD_01_flavour_marstonia_l_english.yml
+++ b/localisation/TD_01_flavour_marstonia_l_english.yml
@@ -21,9 +21,9 @@
  estate_nobles_appointed_bureaucracy_desc:0 "We will allow some nobles to be in charge of managing their local landowner communities and representing them in our court."
  unlock_privilege_estate_nobles_appointed_bureaucracy_tt:0 "Unlock §YNobility§! estate privilege §YNoble Bureaucrats§!"
 
- group_marstonian_ideas:0 "Marstonian Ideas"
- group_marstonian_ideas_start:0 "Marstonian Traditions"
- group_marstonian_ideas_bonus:0 "Marstonian Ambition"
+ group_marstonian_ideas:0 "Marstonian Minor Ideas"
+ group_marstonian_ideas_start:0 "Marstonian Minor Traditions"
+ group_marstonian_ideas_bonus:0 "Marstonian Minor Ambition"
  MARSTONIA_folk_tradition:0 "Folk Tradition"
  MARSTONIA_folk_tradition_desc:0 "Culture of Marstonia is full of colorful festivals, holidays, local dieties and traditions. This makes it very easy to placate our people by organising one of those events."
  MARSTONIA_surrounded_by_the_sea:0 "Surrounded by the Sea"
@@ -38,6 +38,12 @@
  MARSTONIA_land_scouting_desc:0 "Due to many threats from the outside, we have to use every advantage at our disposal. Traversing the harsh forests unnoticable to enemy became popular tactic to fight against the stronger foe."
  MARSTONIA_new_ways:0 "New Ways"
  MARSTONIA_new_ways_desc:0 "Spread of new faiths in marstonia is undeniable. Poeple and entire countries embrace new ways and sometimes reject legacy of their ancestors. Without dialogue with these people, our tradition is at risk of vanishing amidst more universal faiths. It is necessary to strengthen the bonds between our people despite religious differences."
+ 
+ 
+ marstonian_ideas:0 "Marstonian Ideas"
+ marstonian_ideas_start:0 "Marstonian Traditions"
+ marstonian_ideas_bonus:0 "Marstonian Ambition"
+ 
  
  
 
