--- a/localisation/TD_01_Flavour_Rah_jadid_l_english.yml
+++ b/localisation/TD_01_Flavour_Rah_jadid_l_english.yml
@@ -55,18 +55,18 @@
  rah_jadid_cohesion_decrease_tt:0 "This will push us towards Persecution in this incident"
  home_of_ehsani_philosophy:0 "Home of the Ehšani Philosophy"
  ehsani_limited_influence_tt:0 "This will limit Ehšani influence"
- ehsani_growing_influence_tt:0 "THis will cause Ehšani influence to grow"
+ ehsani_growing_influence_tt:0 "This will cause Ehšani influence to grow"
 
- ehsani_resurgence.1.t:0 "Life and Teachings of Ehšan Tiri"
+ ehsani_resurgence.1.t:0 "Life and Teachings of Ehshan Tiri"
  ehsani_resurgence.1.desc:0 "For some time one name was on everyone's lips - Ehšan. Quickly gathering large following, he takes heavy influence from ancient teachings and seeks to reform Uttarian faith into a more monotheistic and unified model to bring together many scattered sects. Recently, he reached out to us to offer himself as a royal advisor."
  ehsani_resurgence.1.a:0 "Will our faith rise from the ashes?"
 
- ehsani_resurgence.2.t:0 "Ehšani Resurgence"
+ ehsani_resurgence.2.t:0 "Ehshani Resurgence"
  ehsani_resurgence.2.desc:0 "Controversial teachings of Ehšan Tiri have finally reached our nation and many Uttarians begin to accept his teachings. One of the most notable communities has sprung up in [ehsani_community_OG.GetName], where they quickly grew into a religious majority. Many of our lords and scholars wish for this community to be eradicated, but there are individuals hoping that understading their beliefs might bring increased stability."
  ehsani_resurgence.2.a:0 "This will be a final nail to the coffin of Uttarian faith."
  ehsani_resurgence.2.b:0 "They can worship whatever they want."
 
- ehsani_resurgence.3.t:0 "Ehšani beliefs spread across the nation"
+ ehsani_resurgence.3.t:0 "Ehshani beliefs spread across the nation"
  ehsani_resurgence.3.desc:0 "As the influence of Ehšan grows, so does his following. Multiple new communities appeared across the nation and even in our cities many convert to this religion."
  ehsani_resurgence.3.a:0 "Try to limit their influence."
  ehsani_resurgence.3.b:0 "Allow them to spread their faith."
@@ -76,22 +76,23 @@
  ehsani_resurgence.4.a:0 "We can't tolerate their radical ideas"
  ehsani_resurgence.4.b:0 "They should be allowed to speak their mind."
 
- ehsani_resurgence.5.t:0 "Ehšani concerned about their safety"
+ ehsani_resurgence.5.t:0 "Ehshani concerned about their safety"
  ehsani_resurgence.5.desc:0 "The persecution of Ehšani by our population has grown large enough that many Uttarians desperately beg us for protection."
  ehsani_resurgence.5.a:0 "Scared? Should be."
  ehsani_resurgence.5.b:0 "Their rights will be respected."
 
- ehsani_resurgence.6.t:0 "Ehšani Resurgence - Persecution"
+ ehsani_resurgence.6.t:0 "Ehshani Resurgence - Persecution"
  ehsani_resurgence.6.desc:0 "After many years of religious turmoil, the Ehšani have finally been dealt with and their influence is slowly decreasing as the persecution is growing."
  ehsani_resurgence.6.a:0 "As it should be."
 
- ehsani_resurgence.7.t:0 "Ehšani Resurgence - Coexistence"
+ ehsani_resurgence.7.t:0 "Ehshani Resurgence - Coexistence"
  ehsani_resurgence.7.desc:0 "After many years of religious turmoil, we and the Ehšani can finally live in peace and many have learned to not interact with eachother to avoid troubles."
  ehsani_resurgence.7.a:0 "As it should be."
 
- ehsani_resurgence.8.t:0 "Ehšani Resurgence - Integration"
+ ehsani_resurgence.8.t:0 "Ehshani Resurgence - Integration"
  ehsani_resurgence.8.desc:0 "After many years of religious turmoil, the Ehšani philosophy has largely impacted the religious doctrines in our nation, causing the tensions to diminish."
  ehsani_resurgence.8.a:0 "As it should be."
+ every_ehsani_province_tt:0 "Every Ehšani province will get:"
 
  ehsani_community:0 "Ehšani Community"
  ehsani_community_protected:0 "Protected Ehšani Community"
