--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -7545,3 +7545,5 @@
  HAS_MORE_MANDATE_THAN_TRIBUTARY_HAS_DEV:0 "Have Mandate of at least of §Y0.4 of [From.GetName]'s§! Total Development"
  conversion_variable:0 "[Root.num_converted_religion.GetValue]"
  conversion_variable_zero:0 "0"
+
+ when_mod_author_finally_gets_to_work_tt:0 "When the author finally gets to work on this mod... (WIP)"
