loc 1 + 1 useless file removed

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1029,3 +1029,41 @@
 
  FRN:0 "Frankras"
  FRN_ADJ:0 "Frankrani"
+
+ CAE:0 "Caidesa"
+ CAE_ADJ:0 "Caidesan"
+ LAL:0 "Lalkumata"
+ LAL_ADJ:0 "Lalkumati"
+ LIL:0 "Lilkumata"
+ LIL_ADJ:0 "Lilkumati"
+ LUH:0 "Luhardesa"
+ LUG_ADJ:0 "Luhardesan"
+ VAD:0 "Vadkumata"
+ VAD_ADJ:0 "Vadkumatian"
+
+ GHO:0 "Ghodara"
+ GHO_ADJ:0 "Ghodaran"
+ MAD:0 "Marudesa"
+ MAD_ADJ:0 "Marudesan"
+ RAH:0 "Randyhali"
+ RAH_ADJ:0 "Randyhalian"
+ SEK:0 "Setakta"
+ SEK_ADJ:0 "Setaktan"
+ AMA:0 "Amajya"
+ AMA_ADJ:0 "Amajyan"
+ PAY:0 "Paviniya"
+ PAY_ADJ:0 "Paviniyan"
+ PVD:0 "Pagavada"
+ PVD_ADJ:0 "Pagavadian"
+
+ COK:0 "Cokhura"
+ COK_ADJ:0 "Cokhuran"
+ PYI:0 "Pyipamo"
+ PYI_ADJ:0 "Pyipami"
+ TAT:0 "Tatkun"
+ TAT_ADJ:0 "Tatkuni"
+ TSE:0 "Tsetsag"
+ TSE_ADJ:0 "Tsetsagi"
+ 
+
+ 
