--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1064,6 +1064,46 @@
  TAT_ADJ:0 "Tatkuni"
  TSE:0 "Tsetsag"
  TSE_ADJ:0 "Tsetsagi"
+
+ DBI:0 "Dbitrara"
+ DBI_ADJ:0 "Dbitrarian"
+ PDT:0 "Padaduta"
+ PDT_ADJ:0 "Padadutian"
+ SBK:0 "Sabkarta"
+ SBK_ADJ:0 "Sabkartan"
+ SND:0 "Sindalabi"
+ SND_ADJ:0 "Sindalabian"
+ SRY:0 "Saryana"
+ SRY_ADJ:0 "Saryanian"
+
+ KTR:0 "Katkaran"
+ KTR_ADJ:0 "Katkari"
+ KUT:0 "Kuttmukam"
+ KUT_ADJ:0 "Kuttmukian"
+ MAL:0 "Malailumi"
+ MAL_ADJ:0 "Malailumian"
+ NRK:0 "Narkuppor"
+ NRK_ADJ:0 "Narkupporian"
+ PNT:0 "Panitakuru"
+ PNT_ADJ:0 "Panitakuri"
  
+ BHA:0 "Bhahana"
+ BHA_ADJ:0 "Bhahanian"
+ KUS:0 "Kusurana"
+ KUS_ADJ:0 "Kusurani"
+ PRI:0 "Pratisana"
+ PRI_ADJ:0 "Pratisani"
+ SJM:0 "Samajmva"
+ SJM_ADJ:0 "Samajmvi"
+ SRT:0 "Suratra"
+ SRT_ADJ:0 "Suratrian"
+ GHA:0 "Ghasadhu"
+ GHA_ADJ:0 "Ghasadhian"
+ NIL:0 "Nildhu"
+ NIL_ADJ:0 "Nildhi"
+ PRD:0 "Prabudavida"
+ PRD_ADJ:0 "Prabudavi"
+ ZAR:0 "Zaradhu"
+ ZAR_ADJ:0 "Zaradhian"
 
  
