--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -219,6 +219,11 @@
 
  viravananti_group:0 "Viravananti"
  amealungali:0 "Amealungali"
+ kataikkar:0 "Kataikkar"
+ malmukam:0 "Malmukam"
+ kotiyam:0 "Kotiyam"
+ itapikkai:0 "Itapikkai"
+ camalakkam:0 "Camalakkam"
 
  samadian_group:0 "Samadian"
  paredeshian:0 "Paredeshian"
@@ -400,3 +405,33 @@
  luetan:0 "Luetan"
  daimin:0 "Daimin"
  hai:0 "Hai"
+
+ sarvini_group:0 "Sarvini"
+ khapada:0 "Khapada"
+ bhajana:0 "Bhajana"
+ sagastra:0 "Sagastra"
+ marudala:0 "Marudala"
+
+ apastra_group:0 "Apastra"
+ donhoda:0 "Donhoda"
+ sanla:0 "Sanla"
+ meyalama:0 "Meyalama"
+ 
+ nacaksu_group:0 "Nacaksu"
+ paratunu:0 "Pratunu"
+
+ kacskyin_group:0 "Kacskyin"
+ dkrolpulta:0 "Dkrolpulta"
+ kerlantu:0 "Kerlantu"
+ spyirtsi:0 "Spyirtsi"
+
+ jatihakta_group:0 "Jakihakta"
+ apagtaru:0 "Apagtaru"
+
+ mazavasi_group:0 "Mazavasi"
+ nadigana:0 "Nadigana"
+ anehara:0 "Anehara"
+ hisacari:0 "Hisacari"
+ vanrya:0 "Vanrya"
+
+ 
