--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -114,3 +114,6 @@
 
  capirian_federation_reform:0 "Capirian Federation"
  capirian_federation_reform_desc:0 "We united this region by diplomacy and reconquest. Now entire Western Camaria will be under our protection from foreign or local invaders"
+
+ terivi_nallennam_reform:0 "Terivi Nallennam"
+ terivi_nallennam_reform_desc:0 "I hate nobles, peasants are my new bffs"
