--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -79,3 +79,7 @@
  tsutan_region:0 "Tsutan"
  raxasa_region:0 "Raxasa"
  huvevasahr_region:0 "Huvevasahr"
+ halmasar_region:0 "Halmasar"
+ rygkun_region:0 "Rygkun"
+ tivappu_region:0 "Tivappu"
+ maisetra_region:0 "Maisetra"
