--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -80,3 +80,10 @@
  xun_tradenode:0 "Densheng"
  zoeng_straits_tradenode:0 "Zoeng Straits"
  hungcho_tradenode:0 "Hungcho"
+ rygkun_tradenode:0 "Rygkun"
+ janma_tradenode:0 "Janma"
+ upacaya_tradenode:0 "Upacaya"
+ pradhana_tradenode:0 "Pradhana"
+ maisetra_tradenode:0 "Maisetra"
+ upper_valvu_tradenode:0 "Upper Valvu"
+ tivappu_tradenode:0 "Tivappu"
