--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3250,20 +3250,20 @@
  PROV3249:0 "3249"
  PROV3250:0 "3250"
  PROV3251:0 "Caizhu"
- PROV3252:0 "3252"
- PROV3253:0 "3253"
- PROV3254:0 "3254"
- PROV3255:0 "3255"
- PROV3256:0 "3256"
- PROV3257:0 "3257"
- PROV3258:0 "3258"
- PROV3259:0 "3259"
+ PROV3252:0 "Hanghu"
+ PROV3253:0 "Xiashan"
+ PROV3254:0 "Dashan"
+ PROV3255:0 "Jiangchu"
+ PROV3256:0 "Zungao"
+ PROV3257:0 "Lindao"
+ PROV3258:0 "Linhau"
+ PROV3259:0 "Hongan"
  PROV3260:0 "Nanan"
- PROV3261:0 "3261"
- PROV3262:0 "3262"
- PROV3263:0 "3263"
+ PROV3261:0 "Miguang"
+ PROV3262:0 "Chuanjing"
+ PROV3263:0 "Xindao"
  PROV3264:0 "Xinsheng"
- PROV3265:0 "3265"
+ PROV3265:0 "Jiangan"
  PROV3266:0 "Hulan"
  PROV3267:0 "Beimen"
  PROV3268:0 "Ziyun"
@@ -3337,8 +3337,8 @@
  PROV3336:0 "3336"
  PROV3337:0 "3337"
  PROV3338:0 "3338"
- PROV3339:0 "3339"
- PROV3340:0 "3340"
+ PROV3339:0 "Lanjing"
+ PROV3340:0 "Tanshu"
  PROV3341:0 "3341"
  PROV3342:0 "3342"
  PROV3343:0 "3343"
@@ -3352,9 +3352,9 @@
  PROV3351:0 "3351"
  PROV3352:0 "3352"
  PROV3353:0 "3353"
- PROV3354:0 "3354"
- PROV3355:0 "3355"
- PROV3356:0 "3356"
+ PROV3354:0 "Langshi"
+ PROV3355:0 "Xindong"
+ PROV3356:0 "Nanlao"
  PROV3357:0 "3357"
  PROV3358:0 "3358"
  PROV3359:0 "3359"
