--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3116,12 +3116,12 @@
  PROV3115:0 "Naiharva"
  PROV3116:0 "Adghari"
  PROV3117:0 "Domaxud"
- PROV3118:0 "3118"
+ PROV3118:0 "Ziyun"
  PROV3119:0 "Donshan"
  PROV3120:0 "Laochuan"
- PROV3121:0 "3121"
- PROV3122:0 "3122"
- PROV3123:0 "3123"
+ PROV3121:0 "Laosheng"
+ PROV3122:0 "Jilao"
+ PROV3123:0 "Pinlao"
  PROV3124:0 "Tolgoin"
  PROV3125:0 "Zarkhan"
  PROV3126:0 "3126"
@@ -3231,27 +3231,27 @@
  PROV3230:0 "3230"
  PROV3231:0 "3231"
  PROV3232:0 "Huangjie"
- PROV3233:0 "3233"
+ PROV3233:0 "Shengkwan"
  PROV3234:0 "Pakgang"
- PROV3235:0 "3235"
- PROV3236:0 "3236"
+ PROV3235:0 "Shuehao"
+ PROV3236:0 "Beigun"
  PROV3237:0 "Waanan"
  PROV3238:0 "Langsheng"
- PROV3239:0 "3239"
- PROV3240:0 "3240"
- PROV3241:0 "3241"
- PROV3242:0 "3242"
- PROV3243:0 "3243"
+ PROV3239:0 "Bazhou"
+ PROV3240:0 "Maoshu"
+ PROV3241:0 "Chuandong"
+ PROV3242:0 "Laoshin"
+ PROV3243:0 "Yunhen"
  PROV3244:0 "3244"
- PROV3245:0 "3245"
- PROV3246:0 "3246"
+ PROV3245:0 "Yining"
+ PROV3246:0 "Tzidao"
  PROV3247:0 "3247"
- PROV3248:0 "3248"
- PROV3249:0 "3249"
- PROV3250:0 "3250"
+ PROV3248:0 "Changhei"
+ PROV3249:0 "Zian"
+ PROV3250:0 "Zaishu"
  PROV3251:0 "Caizhu"
  PROV3252:0 "Hanghu"
- PROV3253:0 "Xiashan"
+ PROV3253:0 "Hengshan"
  PROV3254:0 "Dashan"
  PROV3255:0 "Jiangchu"
  PROV3256:0 "Zungao"
@@ -3332,7 +3332,7 @@
  PROV3331:0 "3331"
  PROV3332:0 "3332"
  PROV3333:0 "3333"
- PROV3334:0 "3334"
+ PROV3334:0 "Zaishan"
  PROV3335:0 "3335"
  PROV3336:0 "3336"
  PROV3337:0 "3337"
