--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3315,14 +3315,14 @@
  PROV3314:0 "3314"
  PROV3315:0 "3315"
  PROV3316:0 "3316"
- PROV3317:0 "3317"
+ PROV3317:0 "Quangao"
  PROV3318:0 "Desheng"
- PROV3319:0 "3319"
+ PROV3319:0 "Qudong"
  PROV3320:0 "3320"
  PROV3321:0 "3321"
  PROV3322:0 "3322"
- PROV3323:0 "3323"
- PROV3324:0 "3324"
+ PROV3323:0 "Caoshan"
+ PROV3324:0 "Xianing"
  PROV3325:0 "3325"
  PROV3326:0 "3326"
  PROV3327:0 "3327"
@@ -3336,37 +3336,37 @@
  PROV3335:0 "3335"
  PROV3336:0 "3336"
  PROV3337:0 "3337"
- PROV3338:0 "3338"
+ PROV3338:0 "Donghau"
  PROV3339:0 "Lanjing"
  PROV3340:0 "Tanshu"
- PROV3341:0 "3341"
- PROV3342:0 "3342"
- PROV3343:0 "3343"
- PROV3344:0 "3344"
- PROV3345:0 "3345"
- PROV3346:0 "3346"
- PROV3347:0 "3347"
- PROV3348:0 "3348"
+ PROV3341:0 "Jiangdau"
+ PROV3342:0 "Gangxin"
+ PROV3343:0 "Luxuan"
+ PROV3344:0 "Linguang"
+ PROV3345:0 "Anzhou"
+ PROV3346:0 "Guanheng"
+ PROV3347:0 "Anhu"
+ PROV3348:0 "Nansheng"
  PROV3349:0 "3349"
- PROV3350:0 "3350"
- PROV3351:0 "3351"
- PROV3352:0 "3352"
+ PROV3350:0 "Haiqi"
+ PROV3351:0 "Langou"
+ PROV3352:0 "Bachang"
  PROV3353:0 "3353"
  PROV3354:0 "Langshi"
  PROV3355:0 "Xindong"
  PROV3356:0 "Nanlao"
  PROV3357:0 "3357"
- PROV3358:0 "3358"
- PROV3359:0 "3359"
+ PROV3358:0 "Shuiyin"
+ PROV3359:0 "Nanshou"
  PROV3360:0 "3360"
  PROV3361:0 "3361"
  PROV3362:0 "Chengcheng"
  PROV3363:0 "Densheng"
- PROV3364:0 "3364"
+ PROV3364:0 "Zonglin"
  PROV3365:0 "3365"
  PROV3366:0 "3366"
  PROV3367:0 "3367"
- PROV3368:0 "3368"
+ PROV3368:0 "Shixin"
  PROV3369:0 "3369"
  PROV3370:0 "3370"
  PROV3371:0 "3371"
