--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -1,1 +1,5 @@
 ﻿l_english:
+ samadian_amijil_reform:0 "Samadian Amijil"
+ samadian_amijil_reform_desc:0 "Samadian states often distrust one another and generally focus on self-preservation through strong military."
+ rakkha_empire_reform:0 "Rakkha Empire"
+ rakkha_empire_reform_desc:0 "Northern states of western Samadia have often taken a matle of 'Guardian State', not only protecting the southern states from nomadic invaders, but also controlling vital trading routes."
