--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1366,7 +1366,7 @@
  PROV1365:0 "Pirtaw"
  PROV1366:0 "Izkar"
  PROV1367:0 "Matwa"
- PROV1368:0 "1368"
+ PROV1368:0 "Gurkaz"
  PROV1369:0 "Nirmaqran"
  PROV1370:0 "Suxat"
  PROV1371:0 "Hnat"
